--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Blog
         $endif$
     $endfor$
 </ul>
-<h2>Other posts</h2>
+<h2>Other posts:</h2>
 <include src="templates/post-list.html"></include>
 <ul>
     $for(posts)$
